--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -7,8 +7,17 @@
         <strong>{{user.name}}</strong><br>
         <span class="text-muted">{{user.email}}</span>
         <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-
-        asd
+        merjveri
+        cmoeprme
+        vv
+        ef
+        erw
+        gwe
+        rvew
+        f
+        ref
+        rf
+        fe
     </li>
   </ul>
 </div>
